--- a/style.css
+++ b/style.css
@@ -4,20 +4,22 @@
     font-family: 'Poppins', sans-serif;
 }
 .header{
-   
+    
     min-height: 100vh;
     width: 100%;
     background-image:linear-gradient(rgba(52, 45, 45, 0.7),rgba(56, 48, 48, 0.7)),url(images/banner.png);
     background-position: center;
     background-size: cover;
-    position: relative;
+    position: sticky;
 }
 nav{
   
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
-    position: relative;
+    position: sticky;
+    top: 0;
+    z-index: 999;
  
 }
 nav img{
